# ComfyUI-Preset-Switcher

./: .gitignore  LICENSE  README.md  __init__.py  nodes.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
js/: i18n.js  lora_preset_manager.js  preset_gallery.js  style_preset_manager.js
locales/: en.json  zh.json
